appId: host.exp.Exponent
---
- runFlow:
    file: signin-flow.yaml
- assertNotVisible:
    id: "EmailTextError"
- assertNotVisible:
    id: "PasswordTextError"
- tapOn:
    id: "EmailTextInput"
- inputText: "foo@bar."
- tapOn:
    id: "PasswordTextInput"
- inputText: "123"
- tapOn: # After sign in button is pressed
    id: "SignInButton"
# We got two errors
- assertVisible:
    id: "EmailTextError"
- assertVisible:
    id: "PasswordTextError"
